Fixed vertical align

--- a/src/componenets/body/Body.css
+++ b/src/componenets/body/Body.css
@@ -27,6 +27,9 @@
 }
 #hello {
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 #aboutme {
     padding: 2vmin;
